# kingfisher

./: .gitignore  CHANGELOG.md  CHANGELOG.md.orig  CHANGELOG.md.rej  Cargo.toml  Makefile  NOTICE  README.md  README.md.orig  README.md.rej  buildwin.bat  f1.patch  install-precommit-hook.sh  install-prereceive-hook.sh  mysqltest.py
.github/workflows/: ci.yml  release-docker.yml  release.yml
data/rules/: adafruitio.yml  adobe.yml  age.yml  ai21.yml  airbrake.yml  airtable.yml  aiven.yml  algolia.yml  alibaba.yml  anthropic.yml  anypoint.yml  apify.yml  artifactory.yml  asana.yml  assemblyai.yml  atlassian.yml  auth0.yml  authress.yml  aws.yml  azure.yml  azuredevops.yml  azureopenai.yml  azuresearchquery.yml  azurestorage.yml  baremetrics.yml  baseten.yml  beamer.yml  bitbucket.yml  bitly.yml  blynk.yml  buildkite.yml  cerebras.yml  circleci.yml  ciscomeraki.yml  clarifai.yml  clearbit.yml  clickhouse.yml  clojars.yml  cloudflare.yml  cloudsight.yml  (+176 more)
docker/: Dockerfile
docs/: BASELINE.md  COMPARISON.md  RULES.md  icons.sh
docs/access-map-viewer/: index.html  sample-report.json  viewer.css  viewer.js
scripts/: install-kingfisher.ps1  install-kingfisher.sh
src/: access_map.rs  azure.rs  baseline.rs  bitbucket.rs  blob.rs  confluence.rs  content_type.rs  decompress.rs  finding_data.rs  findings_store.rs  git_binary.rs  git_metadata_graph.rs  git_repo_enumerator.rs  git_url.rs  gitea.rs  github.rs  gitlab.rs  inline_ignore.rs  jira.rs  lib.rs  lib.rs.orig  liquid_filters.rs  location.rs  main.rs  matcher.rs  parser.rs  reporter.rs  rule_loader.rs  s3.rs  safe_list.rs  slack.rs  update.rs  util.rs  validation.rs  validation.rs.orig  validation_body.rs
src/access_map/: aws.rs  azure.rs  gcp.rs  graph.rs  report.rs
src/cli/: global.rs
src/cli/commands/: access_map.rs  azure.rs  bitbucket.rs  gitea.rs  github.rs  gitlab.rs  inputs.rs  mod.rs  precommit.rs  scan.rs
src/reporter/: bson_format.rs  json_format.rs  json_format.rs.orig  pretty_format.rs  sarif_format.rs  styles.rs
src/rules/: rule.rs
src/scanner/: docker.rs  enumerate.rs  enumerate.rs.orig  mod.rs  processing.rs  repos.rs  runner.rs  summary.rs  validation.rs
src/validation/: aws.rs  azure.rs  coinbase.rs  gcp.rs  httpvalidation.rs  jdbc.rs  jwt.rs  mongodb.rs  mysql.rs  postgres.rs  utils.rs
testdata/: test_char_requirements.yaml
testdata/archive/: kfArchiveTest.7z  kfArchiveTest.tar  kfArchiveTest.tar.bz2  kfArchiveTest.tar.lz4  kfArchiveTest.tar.xz  makeArchives.sh
tests/: cli.rs  cli_failure.rs  cli_subcommands.rs  fingerprint_dedup.rs  int_allowlist.rs  int_base64.rs  int_bitbucket.rs  int_dedup.rs  int_dedup.rs.orig  int_git_diff.rs  int_github.rs  int_gitlab.rs  int_local_path_validation.rs  int_quiet.rs  int_redact.rs  int_redact.rs.orig  int_rules_no_validated_findings.rs  int_s3.rs  int_slack.rs  int_slack.rs.orig  int_uri_parsing.rs  int_validation_cache.rs  int_vulnerable_files.rs  int_vulnerable_files.rs.orig  jdbc_rule.rs  live_db_validation.rs  pre_commit_installer.rs  smoke_archive.rs  smoke_baseline.rs  smoke_branch.rs  smoke_check_rules.rs  smoke_docker.rs  smoke_exclude.rs  smoke_fs.rs  smoke_git.rs  smoke_github_homebrew.rs  smoke_update.rs
